<resources>
    <string name="app_name">WeHike</string>
    <!-- Backend API -->
    <string name="backend_prefix">http://wehike.cloudapp.net</string>

    <!-- Sign in activity -->
    <string name="sign_in_btn_text">Sign in</string>
    <string name="sign_up_btn_text">Sign up</string>
    <string name="find_pwd_btn_text">Forget password?</string>
    <string name="user_name_input_hint">User name</string>
    <string name="pwd_input_hint">Password</string>
    <string name="pwd_confirm_hint">Confirm password</string>
    <string name="email_input_hint">Email</string>
    <string name="not_implemented">Not implemented!</string>

    <!-- Sign up dialog -->
    <string name="user_name_null">User name can\'t be empty!</string>
    <string name="email_null">Email can\'t be empty!</string>
    <string name="password_null">Password can\'t be empty!</string>
    <string name="confirm_password_null">Please confirm password!</string>
    <string name="pwd_not_match">The password doesn\'t match!</string>
    <string name="signup_succeed">Sign up succeeded</string>
</resources>
