<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    tools:context="edu.uw.yw239.wehike.SignUpDiaglog">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp">
        <EditText
            android:id="@+id/sign_up_user_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_input_hint"
            android:maxLines="1"
            android:inputType="text"/>
        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_input_hint"
            android:layout_below="@id/sign_up_user_name"
            android:maxLines="1"
            android:inputType="text"/>
        <EditText
            android:id="@+id/sign_up_pwd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_input_hint"
            android:layout_below="@id/sign_up_email"
            android:maxLines="1"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/sign_up_confirm_pwd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_confirm_hint"
            android:layout_below="@id/sign_up_pwd"
            android:maxLines="1"
            android:inputType="textPassword"/>
        <Button
            android:id="@id/sign_up"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_btn_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/sign_up_confirm_pwd"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_up_btn"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:focusable="false"/>
    </RelativeLayout>

</RelativeLayout>
