<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/into_page"
    tools:context="edu.uw.yw239.wehike.SignInActivity">

    <EditText
        android:id="@+id/input_user_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:hint="@string/user_name_input_hint"
        android:textSize="22sp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="2dp"
        android:maxLines="1"
        android:inputType="text"/>

    <EditText
        android:id="@+id/input_pwd"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:hint="@string/pwd_input_hint"
        android:textSize="22sp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="2dp"
        android:maxLines="1"
        android:inputType="textPassword"/>

    <Button
        android:id="@id/sign_in"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_btn_text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/sign_in_btn"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:focusable="false"
        android:onClick="signIn" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_btn_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sign_in"
        android:background="@drawable/sign_up_btn"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:focusable="false"
        android:onClick="openSignUpDialog"/>

    <Button
        android:id="@+id/find_pwd"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/find_pwd_btn_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sign_up"
        android:layout_marginBottom="10dp"
        android:background="@drawable/find_password_btn"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:focusable="false"
        android:onClick="findPassword"/>
</RelativeLayout>
